--- a/src/App.css
+++ b/src/App.css
@@ -59,12 +59,14 @@
           h2 {
             font-size: 2rem;
             font-weight: 900;
+            ;
           }
         }
         p {
-          margin-left: 20px;
+          text-align: justify;
+          padding: 20px;
+          padding-bottom: 50px;
           font-size: 0.8rem;
-          text-align: left;
           font-weight: 400;
         }
       }
@@ -156,6 +158,7 @@
       .left-bottom-cards {
         .link-icons {
           gap: 10px;
+         
           .icon-card {
             width: 80px;
             height: 80px;
@@ -244,6 +247,40 @@
               color: white;
               font-size: 1.2rem;
             }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1000px) {
+  .main-container {
+    .cards {
+      flex-direction: column;
+      .top-cards {
+        flex-direction: column;
+        .left-card {
+          width: 80%;
+          .top-profile {
+            p {
+              max-width: 80%;
+            }
+          }
+        }
+      }
+      .bottom-cards {
+        flex-direction: column;
+        .left-bottom-cards {
+          flex-direction: row ;
+          .link-icons {
+            flex-direction: row;
+          }
+          .left-bottom-cards {
+            flex-direction: row;
+          }
+          .right-carousel {
+            width: 100%;
           }
         }
       }
